--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -25,7 +25,7 @@ app-main-menu
         h2 ECE STUDENTS’ 24 HOUR BUSINESS GAME IS BACK!
         p 24 Hour Business Game is a sleepless business competition where we aim at helping entrepreneurial students to conceptualize their business ideas. During the challenge, over 150 students, guided by experienced executives, form teams and create their own business plans for the final pitch. All in 24 hours! Judges select the best team, which will receive a grand prize! 
         p The event is taking place at THE Dutch entrepreneurial hub, the ECE Campus in the Rotterdam Science Tower.
-        div
+        div.info
             span 11/12 MAY 2018 | 14:00
             span MARCONISTRAAT 16
             span ECE CAMPUS
@@ -63,107 +63,165 @@ app-main-menu
             li Entrepreneurship 
             li Innovation
     .right
+        img(src='{{ "pages/24hbg/past_image" | cd:"w_300,c_fill"}}')
 
 .agenda
     .wrapper
-        h2 SCHEDULE
-        div.orange
-            span.bold @ECE Campus
-            br
-            | ROTTERDAM SCIENCE TOWER, 11th floor
-            br
-            | Marconistraat 16, 3029 AK
-            br
-            | Rotterdam
+        .top
+            h2 SCHEDULE
+            div.orange
+                span.bold @ECE Campus
+                br
+                | ROTTERDAM SCIENCE TOWER, 11th floor
+                br
+                | Marconistraat 16, 3029 AK
+                br
+                | Rotterdam
         .left
             h3 DAY 1 
+            ul
+                li(*ngFor="let item of agenda1")
+                   span.event {{ item.event }}
+                   span.time {{ item.time }}
+                   
         .right
             h3 DAY 2
-        button(type='submit')
-            a(href="#") SIGN UP
+            ul
+                li
+                    span.event
+                        |Devil's Advocate
+                        br
+                        |(IT, Finance, Marketing Assistance)
+                    span.time 0:00 - 7:30
+                li
+                    span.event
+                        |Midnight Party
+                        br
+                        |Relaxing Yoga
+                        br
+                        |Kickboxing
+                li(*ngFor="let item of agenda2")
+                   span.event {{ item.event }}
+                   span.time {{ item.time }}
+                li
+                    span.event
+                        |Winner Ceremony
+                        br
+                        |Last Man Standing Networking
+                    span.time 13:00 - 14:00
+                   
+        .buttonHolder
+            button(type='submit')
+                a(href="#") Sign up
 
 .sponsors
     h2 PREVIOUS SPONSORS
-    .sponsor-grid images
+    .row1
+        img(src='{{ "pages/24hbg/Asset_20" | cd:"w_250,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_3" | cd:"w_150,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_16" | cd:"w_120,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_14" | cd:"w_200,c_fill"}}')
+    .row2
+        img(src='{{ "pages/24hbg/Asset_6" | cd:"w_250,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_9" | cd:"w_150,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_7" | cd:"w_150,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_5" | cd:"w_150,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_15" | cd:"c_crop,g_north,h_223,w_307/w_200,c_fill"}}')
+    .row3
+        img(src='{{ "pages/24hbg/Asset_18" | cd:"w_250,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_12" | cd:"w_150,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_13" | cd:"w_150,c_fill"}}')
+        img(src='{{ "pages/24hbg/Asset_11" | cd:"w_200,c_fill"}}')
     
 .speakers
-    .logo logo
-    p 
-        | The 2018 edition of the 
-        span.bold 24 hour business game 
-        | will take place in the Rotterdam Science Tower, heart of the Rotterdam's entrepreneurial spirit , on 
-        span.bol May 12th and 13th.
-    .speakers-grid
-        h2 speakers
-        .img
-        .text
-            | CHRIS
-            br
-            | OUT
-            br
-            span Managing Partner & Lead Growth Hacker
-            br
-            span RockBoost
-        .img
-        .text
-            | CHRIS
-            br
-            | OUT
-            br
-            span Managing Partner & Lead Growth Hacker
-            br
-            span RockBoost
-        h2 judges
-        .img
-        .text
-            | CHRIS
-            br
-            | OUT
-            br
-            span Managing Partner & Lead Growth Hacker
-            br
-            span RockBoost
-        .img
-        .text
-            | CHRIS
-            br
-            | OUT
-            br
-            span Managing Partner & Lead Growth Hacker
-            br
-            span RockBoost
+    .wrapper
+        img.logo(src='{{ "pages/24hbg/24HBG_logo" | cd:"w_300,c_fill"}}')
+        p 
+            | The 2018 edition of the 
+            span.bold 24 hour business game 
+            | will take place in the Rotterdam Science Tower, heart of the Rotterdam's entrepreneurial spirit , on 
+            span.bol May 12th and 13th.
+        
+        h2 SPEAKERS
+        .speakers-grid
+            .img
+                img(src='{{ "pages/24hbg/speaker" | cd:"w_100,c_fill"}}')
+            .text
+                | CHRIS
+                br
+                | OUT
+                br
+                span Managing Partner & Lead Growth Hacker
+                br
+                span RockBoost
+            .img
+                img(src='{{ "pages/24hbg/speaker" | cd:"w_100,c_fill"}}')
+            .text
+                | CHRIS
+                br
+                | OUT
+                br
+                span Managing Partner & Lead Growth Hacker
+                br
+                span RockBoost
+        h2 JUDGES
+        .speakers-grid
+            .img
+                img(src='{{ "pages/24hbg/speaker" | cd:"w_100,c_fill"}}')
+            .text
+                | CHRIS
+                br
+                | OUT
+                br
+                span Managing Partner & Lead Growth Hacker
+                br
+                span RockBoost
+            .img
+                img(src='{{ "pages/24hbg/speaker" | cd:"w_100,c_fill"}}')
+            .text
+                | CHRIS
+                br
+                | OUT
+                br
+                span Managing Partner & Lead Growth Hacker
+                br
+                span RockBoost
 //.video
 
 .map
-    button(type='submit')
-        a(href="#") SIGN UP
+    iframe( src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9844.7878918995!2d4.429621!3d51.9121173!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x60e0b212036d407a!2sErasmus+Centre+for+Entrepreneurship!5e0!3m2!1snl!2snl!4v1518377585049" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen )
+    .buttonHolder
+        button(type='submit')
+            a(href="#") SIGN UP
 
 .contact
-    h2 
-        | Want to know  more?
-        br
-        | Get in touch
-    .icon
-    .person
-        | img
-        br
-        span.orange Christoph Dvorak
-        br
-        | christoph.dvorak@ecestudents.com
-        br
-        | +43 650 86 44 450
+    .wrapper
+        .left
+            h2 
+                | Want to know  more?
+                br
+                | Get in touch.
+            .icon
+        .person
+            img(src='{{ "pages/24hbg/asset_22" | cd:"w_150,c_fill"}}')
+            br
+            span.orange Christoph Dvorak
+            br
+            | christoph.dvorak@ecestudents.com
+            br
+            | +43 650 86 44 450
+            
+        .person
+            img(src='{{ "pages/24hbg/asset_21" | cd:"w_150,c_fill"}}')
+            br
+            span.orange Maud Hascoët
+            br
+            | maud.hascoet@ecestudents.com
+            br
+            | +31 6 10 81 21 97
         
-    .person
-        |img
-        br
-        span.orange Maud Hascoët
-        br
-        | maud.hascoet@ecestudents.com
-        br
-        | +31 6 10 81 21 97
-    
-    .social
-        |Check our 
-        span.light Facebook page
-        | to know more about the previous editions of the event!
+        .social
+            |Check our 
+            span.light Facebook page
+            | to know more about the previous editions of the event!
 app-footer
