--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -229,7 +229,7 @@ app-main-menu {
 
 .agenda {
     background: linear-gradient( rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.7)), cd("pages/24hbg/avi-richards-183715", "c_scale,w_1920") no-repeat;
+    rgba(0, 0, 0, 0.7)), cd("pages/24hbg/24hbg_background", "c_scale,w_1920") no-repeat;
     color: white;
     border-bottom: 4px solid $ece-orange;
     h2 {
@@ -386,8 +386,34 @@ app-main-menu {
         align-items: center;
         text-align: center;
         
+        .person{
+            .orange{
+                color: $ece-orange;
+                margin-top: ms(0);
+                display: inline-block;
+            }
+            a {
+             color: white;
+             font-size: ms(0);
+            }
+        }
+        
         .social{
-            grid-area: social; 
+            grid-area: social;
+            margin: ms(1) 0;
+            font-size: ms(.5);
+            font-weight: 400;
+            
+            a {
+             color: white;
+             font-size: ms(0.5);
+            }
+        }
+        
+        
+        .light {
+            font-style: italic;
+            font-weight: 200;
         }
     }
 }
