--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -207,21 +207,21 @@ app-main-menu
             br
             span.orange Christoph Dvorak
             br
-            | christoph.dvorak@ecestudents.com
+            a(href="mailto:christoph.dvorak@ecestudents.com") christoph.dvorak@ecestudents.com
             br
-            | +43 650 86 44 450
+            span.light +43 650 86 44 450
             
         .person
             img(src='{{ "pages/24hbg/asset_21" | cd:"w_150,c_fill"}}')
             br
             span.orange Maud Hascoët
             br
-            | maud.hascoet@ecestudents.com
+            a(href="mailto:maud.hascoet@ecestudents.com") maud.hascoet@ecestudents.com
             br
-            | +31 6 10 81 21 97
+            span.light +31 6 10 81 21 97
         
         .social
             |Check our 
-            span.light Facebook page
+            a.light(href="https://www.facebook.com/ECEStudents") Facebook page 
             | to know more about the previous editions of the event!
 app-footer
