--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -48,8 +48,8 @@ app-main-menu {
         margin: 0;
         padding-top: ms(1);
         font-weight: 300;
-        font-size: ms(1.2);
-        color: $ece-orange;
+        font-size: ms(1.6);
+        color: white;
         @include bp(medium) {
             font-size: ms(2);
         }
@@ -115,11 +115,19 @@ app-main-menu {
         border-color: white;
         border-width: 2px;
         padding: 20px 50px;
+        webkit-transition: all 0.25s ease-out, color 0.25s ease-out;
+        transition: all 0.25s ease-out, color 0.25s ease-out;
         a {
             color: white;
             font-size: ms(2);
             font-weight: 200;
 
+        }
+        &:hover {
+            background-color: white;
+            a {
+                color: $ece-black;
+            }
         }
     }
     .under {
@@ -249,7 +257,12 @@ app-main-menu {
         }
         &.studies {
             li {
-                margin-right: ms(0);
+                margin-right: ms(-1);
+                
+                &.big {
+                    font-size: ms(1);
+                    line-height: ms(1);
+                }
             }
         }
     }
