--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -138,7 +138,7 @@ app-main-menu
     
 .speakers
     .wrapper
-        img.logo(src='{{ "pages/24hbg/24HBG_logo" | cd:"w_300,c_fill"}}')
+        img.logo(src='{{ "pages/24hbg/logo" | cd:"w_600,c_fill"}}')
         p 
             | The 2018 edition of the 
             span.bold 24 hour business game 
