--- a/src/app/pages/event-page/style.scss
+++ b/src/app/pages/event-page/style.scss
@@ -319,7 +319,10 @@ p {
         grid-template-columns: repeat(1, auto);
         grid-column-gap: ms(1);
         //grid-row-gap: ms(0);
-
+        h2 {
+            font-size: ms(0);
+            color: #932158;
+        }
         @include bp(large) {
             grid-template-columns: repeat(2, auto);
         }
