--- a/src/app/pages/board_recruitment/style.scss
+++ b/src/app/pages/board_recruitment/style.scss
@@ -64,13 +64,16 @@ app-main-menu {
 
             .imgwrap {
                 height: ms(5);
-
+                display: grid;
+                grid-template-columns: 1fr auto 1fr;
+                grid-template-rows: 1fr auto 1fr;
                 img {
                     //height: 60px;
-                    max-height: 90%;
-                    max-width: 90%;
-                    width:auto;
-                    margin: ms(0);
+                    max-height: 130px;
+                    max-width: 130px;
+                    margin: auto auto;
+                    grid-column:2/3;
+                    grid-row:2/3;
                 }
             }
             span {
