--- a/src/app/pages/board_recruitment/template.pug
+++ b/src/app/pages/board_recruitment/template.pug
@@ -1,8 +1,8 @@
 app-main-menu
 
-.wrapper
-    h1.tagline Are you on board?
+h1.tagline Are you on <span>board?</span>
 
+.wrapper
     h2.intro Check out the open ECE Students Board positions for the academic year 2018-2019!
 
     .overview
@@ -14,5 +14,5 @@ app-main-menu
     h2.cta You can <a class="blue" target="_blank" href="https://ecestudents2018.typeform.com/to/ruK1fY">apply directly</a> for a position or you can come have a chat with us <a class="orange"  target="_blank" href="https://ecestudents2018.typeform.com/to/e2Rfzh">over coffee</a>.
 
     .lastyear
-        h2 Check out last year's board!
+        h2 Check out this year's board!
         img(src='{{ "pages/recruitment/board" | cd:"w_1080,c_fill"}}')
