--- a/src/app/parts/dialog/style.scss
+++ b/src/app/parts/dialog/style.scss
@@ -1,5 +1,30 @@
 @import 'mixins';
 
 .wrapper {
-    width: ms(8);
+    max-width: ms(8);
+
+    h1 {
+        color:$ece-orange;
+        float:left;
+    }
+
+    button{
+        @include fa("times", ms(1), $ece-orange)
+        float:right;
+    }
+
+    .content {
+        clear:both;
+    }
+
+    .skills {
+        font-weight: 1000;
+        font-size: ms(1);
+    }
+
+    .apply {
+        text-align: center;
+        font-size: ms(1);
+        text-transform:uppercase;
+    }
 }
