--- a/src/app/pages/board_recruitment/template.pug
+++ b/src/app/pages/board_recruitment/template.pug
@@ -16,4 +16,4 @@ h1.tagline Are you on <span>board?</span>
 
     .lastyear
         h2 Check out this year's board!
-        img(src='{{ "pages/recruitment/board2" | cd:"w_1080,c_fill"}}')
+        img(src='{{ "pages/recruitment/board" | cd:"w_1080,c_fill"}}')
