--- a/src/app/parts/dialog/style.scss
+++ b/src/app/parts/dialog/style.scss
@@ -32,7 +32,7 @@
 
     .apply {
         text-align: center;
-        margin-top: ms(1);
+        margin: ms(1) 0;
         a {
             text-align: center;
             font-size: ms(1);
