--- a/src/app/parts/dialog/style.scss
+++ b/src/app/parts/dialog/style.scss
@@ -23,6 +23,10 @@
 
     .content {
         clear: both;
+        .two {
+            text-align: center;
+            font-style: italic;
+        }
     }
 
     .skills {
@@ -46,4 +50,5 @@
         }
 
     }
+
 }
