--- a/src/app/pages/board_recruitment/style.scss
+++ b/src/app/pages/board_recruitment/style.scss
@@ -77,10 +77,7 @@ text-align: center;
             }
         }
 
-
-
         margin: auto;
-
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -109,7 +106,8 @@ text-align: center;
             width: 100%;
         }
         margin-bottom: ms(2);
+        .description {
+            text-align: left;
+        }
     }
-
-
 }
