--- a/src/app/pages/board_recruitment/template.pug
+++ b/src/app/pages/board_recruitment/template.pug
@@ -17,3 +17,4 @@ h1.tagline Are you on <span>board?</span>
     .lastyear
         h2 Check out this year's board!
         img(src='{{ "pages/recruitment/board" | cd:"w_1080,c_fill"}}')
+        .description From left to right: Daniel Rietzler (Vice-President), Ranya Bellouki (Marketing & Tech Manager), Atif Parekh (President), Casper van Mook (External Relations Manager), Valerie Loutphi (Programme Manager) & Alfredo Desiderio (Programme Manager).
