added coffe buttons

--- a/src/app/parts/dialog/style.scss
+++ b/src/app/parts/dialog/style.scss
@@ -39,8 +39,30 @@
 
     .apply {
         text-align: center;
-        margin: ms(1) 0;
+        margin: ms(1) 5%;
+        width: 40%;
+        float: left;
         background-color: $ece-blue;
+        &:hover {
+            box-shadow: 0 0 10px #515151;
+        }
+        a {
+            text-align: center;
+            font-size: ms(1);
+            text-transform: uppercase;
+            padding: ms(0);
+            color: white;
+
+        }
+
+    }
+
+    .coffee {
+        text-align: center;
+        margin: ms(1) 5%;
+        width: 40%;
+        float: left;
+        background-color: $ece-orange;
         &:hover {
             box-shadow: 0 0 10px #515151;
         }
